add type into model job table
