# src/modules/model-job/dto/create-model-job.dto.ts
@@ -1,19 +1,62 @@
 import { ApiProperty } from "@nestjs/swagger";
-import { IsEnum, IsNotEmpty, IsString, IsUUID } from "class-validator";
+import {
+  IsEnum,
+  IsNotEmpty,
+  IsOptional,
+  IsString,
+  IsUUID,
+} from "class-validator";
 import { IModelJobCreate } from "../types/model-job-mutations.interface";
 import { ModelType } from "../types/model-job.enum";
 
-export class CreateModelJobDto implements Omit<IModelJobCreate, "userId"> {
+export class StartProcessBaseDto
+  implements Omit<IModelJobCreate, "userId" | "type">
+{
   @ApiProperty({ enum: ModelType, enumName: "ModelType" })
   @IsEnum(ModelType)
   @IsNotEmpty()
   model!: ModelType;
+}
+
+export class StartImageEditByPromptIdDto
+  extends StartProcessBaseDto
+  implements Omit<IModelJobCreate, "userId" | "type">
+{
+  @ApiProperty()
+  @IsUUID()
+  promptId!: string;
 
   @ApiProperty({ example: "Мягкое освещение, крупный план" })
   @IsString()
-  prompt!: string;
+  @IsOptional()
+  @IsNotEmpty()
+  text?: string;
 
   @ApiProperty()
   @IsUUID()
-  inputFileId?: string;
+  inputFileId!: string;
+}
+
+export class StartImageEditByPromptTextDto
+  extends StartProcessBaseDto
+  implements Omit<IModelJobCreate, "userId" | "type">
+{
+  @ApiProperty({ example: "Мягкое освещение, крупный план" })
+  @IsString()
+  @IsNotEmpty()
+  text: string;
+
+  @ApiProperty()
+  @IsUUID()
+  inputFileId!: string;
+}
+
+export class StartImageGenerateByPromptTextDto
+  extends StartProcessBaseDto
+  implements Omit<IModelJobCreate, "userId" | "type">
+{
+  @ApiProperty({ example: "Мягкое освещение, крупный план" })
+  @IsString()
+  @IsNotEmpty()
+  text: string;
 }
