# src/modules/model-job/model-job.controller.ts
@@ -8,7 +8,11 @@ import {
   ParseUUIDPipe,
 } from "@nestjs/common";
 import { ModelJobService } from "./model-job.service";
-import { CreateModelJobDto } from "./dto/create-model-job.dto";
+import {
+  StartImageEditByPromptIdDto,
+  StartImageEditByPromptTextDto,
+  StartImageGenerateByPromptTextDto,
+} from "./dto/create-model-job.dto";
 import { UserId } from "src/common/decorators/user-id.decorator";
 import { JwtAuthGuard } from "../auth/guards/jwt-auth.guard";
 import { RolesGuard } from "../users/user-roles.guard";
@@ -16,6 +20,7 @@ import { UserRole } from "../users/types/user-role.enum";
 import { Roles } from "../users/user-roles.decorator";
 import { ApiOperation, ApiResponse } from "@nestjs/swagger";
 import { ModelJobDto } from "./dto/model-job.dto";
+import { ModelJobType } from "./types/model-job.enum";
 
 @Controller("model-job")
 export class ModelJobController {
@@ -34,15 +39,59 @@ export class ModelJobController {
   }
 
   @Post()
-  @UseGuards(JwtAuthGuard, RolesGuard)
-  @Roles(UserRole.Admin)
+  @UseGuards(JwtAuthGuard)
   @ApiResponse({
     status: 201,
     description: "Генерация запущена",
     type: ModelJobDto,
   })
-  async create(@Body() dto: CreateModelJobDto, @UserId() userId: string) {
-    const data = await this.modelJobService.create({ ...dto, userId });
+  async startImageEditByPromptId(
+    @Body() dto: StartImageEditByPromptIdDto,
+    @UserId() userId: string
+  ) {
+    const data = await this.modelJobService.create({
+      ...dto,
+      type: ModelJobType.ImageEditByPromptId,
+      userId,
+    });
+    return data;
+  }
+
+  @Post()
+  @UseGuards(JwtAuthGuard)
+  @ApiResponse({
+    status: 201,
+    description: "Генерация запущена",
+    type: ModelJobDto,
+  })
+  async startImageEditByPromptText(
+    @Body() dto: StartImageEditByPromptTextDto,
+    @UserId() userId: string
+  ) {
+    const data = await this.modelJobService.create({
+      ...dto,
+      type: ModelJobType.ImageEditByPromptText,
+      userId,
+    });
+    return data;
+  }
+
+  @Post()
+  @UseGuards(JwtAuthGuard)
+  @ApiResponse({
+    status: 201,
+    description: "Генерация запущена",
+    type: ModelJobDto,
+  })
+  async startImageGenerateByPromptText(
+    @Body() dto: StartImageGenerateByPromptTextDto,
+    @UserId() userId: string
+  ) {
+    const data = await this.modelJobService.create({
+      ...dto,
+      type: ModelJobType.ImageGenerateByPromptText,
+      userId,
+    });
     return data;
   }
 }
