# src/modules/model-job/types/model-job-mutations.interface.ts
@@ -1,8 +1,10 @@
-import { ModelType } from "./model-job.enum";
+import { ModelJobType, ModelType } from "./model-job.enum";
 
 export interface IModelJobCreate {
   model: ModelType;
-  prompt: string;
+  type: ModelJobType;
+  text?: string;
+  promptId?: string;
   inputFileId?: string;
   userId: string;
 }
